--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="row">
 							<div class="col-12">
 								<div class="header_logo oflow-hd floatleft">
-									<a href="<?php echo bloginfo('home'); ?>"><img src="images/fxusd.svg"/></a>
+									<a href=""><img src="images/fxusd.svg"/></a>
 								</div>
 								
 								<div class="header_social floatright">
