--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 			<div class="row">
 				<div class="col-md-5">
 					<div class="footer_logo oflow-hd">
-						<img src="images/footer-logo.svg" alt="img"/>
+						<img src="images/fxusd.svg" alt="img"/>
 					</div>
 					
 								<div class="footer_social oflow-hd">
