--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 			
+			<link rel="shortcut icon" type="image/jpg" href="images/fxusd.svg"/>
+			
 			<!--[if IE]>  
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>  
 			<![endif]-->
